# comment-content-agg

./: .gitignore  CCA.drawio  README.md
backend/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.json  main.cpp  run.sh
backend/src/database/: database.hpp
backend/src/dto/server/: from_checkin.hpp  from_enqueue.hpp  from_estimate.hpp  to_server.hpp
backend/src/dto/threads/: from_process.hpp  to_process.hpp
backend/src/google_api/: google_api.hpp
backend/src/helper_classes/: processed_comment.hpp  raw_comment.hpp  video_details.hpp
backend/src/process/: worker_handler_process.hpp  worker_process.hpp
backend/src/server/: server.hpp
frontend/: README.md  bun.lockb  package.json
frontend/src/: App.css  App.js
frontend/src/api/: api.ts
frontend/src/helper_funcs/: validate_url.ts
